<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.cmuapp.MainActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="0.5"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/main_background"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/product_nine"
        android:textColor="@color/colorAccent"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        android:layout_marginStart="32dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="cursive"
        android:text="@string/business_name"
        android:textColor="@color/business_color"
        android:textSize="68sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="32dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="32dp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="157dp"
        android:fontFamily="monospace"
        android:text="@string/product_eight"
        android:textColor="@color/colorAccent"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="32dp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/product_five"
        android:textColor="@color/colorAccent"
        android:textSize="24sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView6"
        app:layout_constraintLeft_toRightOf="@+id/textView6"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/product_four"
        android:textColor="@color/colorAccent"
        android:textSize="24sp"
        app:layout_constraintLeft_toRightOf="@+id/textView4"
        android:layout_marginLeft="16dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView4"
        android:layout_marginStart="16dp" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/product_nine"
        android:textColor="@color/colorAccent"
        android:textSize="20sp"
        android:layout_marginLeft="32dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        android:layout_marginStart="32dp" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/product_one"
        android:textColor="@color/colorAccent"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView8"
        app:layout_constraintLeft_toRightOf="@+id/textView8"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/product_three"
        android:textColor="@color/colorAccent"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView9"
        app:layout_constraintLeft_toRightOf="@+id/textView9"
        android:layout_marginLeft="75dp"
        android:layout_marginStart="75dp" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Shop no 7, Vishwakarma Paradise"
        android:textSize="16sp"
        android:layout_marginLeft="43dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        android:layout_marginBottom="89dp"
        android:layout_marginStart="43dp" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Ambadi Road, Vasai, Maharashtra 40201"
        android:textSize="16sp"
        android:layout_marginTop="2dp"
        app:layout_constraintTop_toBottomOf="@+id/textView12"
        android:layout_marginLeft="46dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="46dp" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="abhyankars@gmail.com"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@+id/textView13"
        app:layout_constraintLeft_toRightOf="@+id/imageView4"
        android:layout_marginLeft="14dp"
        android:layout_marginStart="14dp" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="20dp"
        android:layout_height="17dp"
        app:srcCompat="@drawable/phone"
        android:layout_marginLeft="12dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="9dp"
        app:layout_constraintTop_toBottomOf="@+id/textView14"
        android:layout_marginStart="12dp" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="21dp"
        android:layout_height="19dp"
        app:srcCompat="@drawable/email"
        android:layout_marginLeft="11dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView14"
        android:layout_marginStart="11dp" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="14dp"
        android:layout_marginTop="9dp"
        android:text="+91 9087643290"
        android:textSize="16sp"
        app:layout_constraintLeft_toRightOf="@+id/imageView3"
        app:layout_constraintTop_toBottomOf="@+id/textView14"
        android:layout_marginStart="14dp" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="21dp"
        android:layout_height="22dp"
        app:srcCompat="@drawable/location"
        android:layout_marginLeft="11dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="85dp"
        android:layout_marginStart="11dp" />

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.MapFragment"
        android:layout_width="250dp"
        android:layout_height="150dp"
        android:layout_marginLeft="46dp"
        android:layout_marginStart="38dp"
        android:layout_marginTop="245dp"
        app:layout_constraintLeft_toLeftOf="@+id/imageView2"
        app:layout_constraintTop_toTopOf="@+id/imageView2" />

</android.support.constraint.ConstraintLayout>
